; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_adc_set_atten.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_adc_set_atten.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ADC_UNIT_1 = common dso_local global i32 0, align 4
@ADC1_CHANNEL_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"ADC Channel Err\00", align 1
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ADC_ATTEN_MAX = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [14 x i8] c"ADC Atten Err\00", align 1
@rtc_spinlock = common dso_local global i32 0, align 4
@SENS_SAR_ATTEN1_REG = common dso_local global i32 0, align 4
@SENS_SAR1_ATTEN_VAL_MASK = common dso_local global i32 0, align 4
@ADC_UNIT_2 = common dso_local global i32 0, align 4
@SENS_SAR_ATTEN2_REG = common dso_local global i32 0, align 4
@SENS_SAR2_ATTEN_VAL_MASK = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i64)* @adc_set_atten to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adc_set_atten(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @ADC_CHECK_UNIT(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @ADC_UNIT_1, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = load i64, i64* @ADC1_CHANNEL_MAX, align 8
  %17 = icmp slt i64 %15, %16
  %18 = zext i1 %17 to i32
  %19 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %20 = call i32 @RTC_MODULE_CHECK(i32 %18, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %13, %3
  %22 = load i64, i64* %6, align 8
  %23 = load i64, i64* @ADC_ATTEN_MAX, align 8
  %24 = icmp slt i64 %22, %23
  %25 = zext i1 %24 to i32
  %26 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %27 = call i32 @RTC_MODULE_CHECK(i32 %25, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  %28 = call i32 @portENTER_CRITICAL(i32* @rtc_spinlock)
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* @ADC_UNIT_1, align 4
  %31 = and i32 %29, %30
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %40

33:                                               ; preds = %21
  %34 = load i32, i32* @SENS_SAR_ATTEN1_REG, align 4
  %35 = load i32, i32* @SENS_SAR1_ATTEN_VAL_MASK, align 4
  %36 = load i64, i64* %6, align 8
  %37 = load i32, i32* %5, align 4
  %38 = mul nsw i32 %37, 2
  %39 = call i32 @SET_PERI_REG_BITS(i32 %34, i32 %35, i64 %36, i32 %38)
  br label %40

40:                                               ; preds = %33, %21
  %41 = load i32, i32* %4, align 4
  %42 = load i32, i32* @ADC_UNIT_2, align 4
  %43 = and i32 %41, %42
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %52

45:                                               ; preds = %40
  %46 = load i32, i32* @SENS_SAR_ATTEN2_REG, align 4
  %47 = load i32, i32* @SENS_SAR2_ATTEN_VAL_MASK, align 4
  %48 = load i64, i64* %6, align 8
  %49 = load i32, i32* %5, align 4
  %50 = mul nsw i32 %49, 2
  %51 = call i32 @SET_PERI_REG_BITS(i32 %46, i32 %47, i64 %48, i32 %50)
  br label %52

52:                                               ; preds = %45, %40
  %53 = call i32 @portEXIT_CRITICAL(i32* @rtc_spinlock)
  %54 = load i32, i32* @ESP_OK, align 4
  ret i32 %54
}

declare dso_local i32 @ADC_CHECK_UNIT(i32) #1

declare dso_local i32 @RTC_MODULE_CHECK(i32, i8*, i32) #1

declare dso_local i32 @portENTER_CRITICAL(i32*) #1

declare dso_local i32 @SET_PERI_REG_BITS(i32, i32, i64, i32) #1

declare dso_local i32 @portEXIT_CRITICAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
